# dotfiles-xmonad

.xmonad/: build  config.hs  xmonad-config.cabal
