name:          xmonad-config
version:       0.0
synopsis:      XMonad Config File
homepage:      http://xmonad.org
license:       BSD2
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2016,2017 Peter J. Jones
category:      Graphics
build-type:    Simple
cabal-version: >=1.8

executable xmonad-config
  hs-source-dirs: ., lib
  main-is: config.hs
  build-depends: base, xmonad, xmonad-contrib, containers, directory, X11
  other-modules: XMonad.Additions.Actions, XMonad.Additions.Keys, XMonad.Additions.Layout
